Ensure code blocks have a contrasting font color

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -258,6 +258,7 @@ blockquote {
 			font-size: 0.9em;
 			border-radius: 3px;
 			background: $color-grey;
+      color: $color-offblack;
 		}
 		.highlight {
 			margin: 10px;
